--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,34 @@
 version: 0.2
 os: linux
-files:
-  - source: index.html
-    destination: /var/www/html/
+
+phases:
+  install:
+    runtime-versions:
+      nodejs: 16  # Include this if you're using Node.js for testing
+    commands:
+      - echo Installing dependencies...
+      - npm install  # Remove this if you don't need any dependencies
+
+  pre_build:
+    commands:
+      - echo Starting pre-build phase...
+      # You can include build commands if needed, or remove this phase if not necessary
+
+  build:
+    commands:
+      - echo Starting build phase...
+      # This phase is optional for your case, remove if not needed
+
+  post_build:
+    commands:
+      - echo Running post-build phase...
+      # Actions like deployment can be included here
+
+  test:
+    commands:
+      - echo Running tests...
+      - npm test  # Ensure your test cases run correctly
+
 hooks:
   BeforeInstall:
     - location: scripts/install_dependencies.sh
@@ -11,26 +37,13 @@ hooks:
     - location: scripts/start_server.sh
       timeout: 300
       runas: root
+
   ApplicationStop:
     - location: scripts/stop_server.sh
       timeout: 300
       runas: root
 
-phases:
-  install:
-    runtime-versions:
-      nodejs: 16
-    commands:
-      - npm install
-  pre_build:
-    commands:
-      - echo Running pre-build steps...
-  build:
-    commands:
-      - echo Running build steps...
-  post_build:
-    commands:
-      - echo Running post-build steps...
-  test:
-    commands:
-      - npm run test
+artifacts:
+  files:
+    - '**/*'
+  discard-paths: no
