--- a/appspec.yml
+++ b/appspec.yml
@@ -1,14 +1,25 @@
-version: 0.0
+version: 0.2
 os: linux
+
 files:
   - source: /
     destination: /var/www/html
+
 hooks:
   BeforeInstall:
     - location: scripts/install_dependencies.sh
+      timeout: 300
+      runas: root
+  ApplicationStop:  # Added to stop the server if needed
+    - location: scripts/stop_server.sh
       timeout: 300
       runas: root
   AfterInstall:
     - location: scripts/start_server.sh
       timeout: 300
       runas: root
+  ValidateService:  # Optional validation step to check if the app is running correctly
+    - location: scripts/validate_service.sh
+      timeout: 300
+      runas: root
+
