--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,49 +1,23 @@
-version: 0.2
-os: linux
-
 phases:
   install:
     runtime-versions:
-      nodejs: 16  # Include this if you're using Node.js for testing
+      nodejs: 16
     commands:
       - echo Installing dependencies...
-      - npm install  # Remove this if you don't need any dependencies
+      - npm install  # Install necessary dependencies
 
   pre_build:
     commands:
-      - echo Starting pre-build phase...
-      # You can include build commands if needed, or remove this phase if not necessary
+      - echo Preparing the build environment...
+      # Any preparation commands before the main build can go here
 
   build:
     commands:
-      - echo Starting build phase...
-      # This phase is optional for your case, remove if not needed
+      - echo Running tests...
+      - npm test  # Run your tests here
+      # Include any other build commands as needed
 
   post_build:
     commands:
-      - echo Running post-build phase...
-      # Actions like deployment can be included here
-
-  test:
-    commands:
-      - echo Running tests...
-      - npm test  # Ensure your test cases run correctly
-
-hooks:
-  BeforeInstall:
-    - location: scripts/install_dependencies.sh
-      timeout: 300
-      runas: root
-    - location: scripts/start_server.sh
-      timeout: 300
-      runas: root
-
-  ApplicationStop:
-    - location: scripts/stop_server.sh
-      timeout: 300
-      runas: root
-
-artifacts:
-  files:
-    - '**/*'
-  discard-paths: no
+      - echo Post build phase...
+      # Actions like deploying or cleaning up can be included here
