--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,41 +3,27 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 16  # Specify only one runtime version
+      nodejs: 16  # Specify the Node.js runtime version
     commands:
-      - echo Installing dependencies...
-      - npm install  # Install necessary dependencies
+      - echo "Installing dependencies..."
+      - npm install
 
   pre_build:
     commands:
-      - echo Running pre-build commands...
-      # Include any additional preparation commands here
+      - echo "Running pre-build commands..."
+      # You can include any commands you need to run before the build phase here
 
   build:
     commands:
-      - echo Running build commands...
-      - npm test  # Run your tests here
+      - echo "Running build commands..."
+      - npm test  # Run your test suite
 
   post_build:
     commands:
-      - echo Running post-build commands...
-      # Include any additional deployment or cleanup commands here
+      - echo "Running post-build commands..."
+      # Any commands after the build can go here, such as packaging or notifications
 
 artifacts:
   files:
     - '**/*'
   discard-paths: no
-
-hooks:
-  BeforeInstall:
-    - location: scripts/install_dependencies.sh
-      timeout: 300
-      runas: root
-  ApplicationStop:
-    - location: scripts/stop_server.sh
-      timeout: 300
-      runas: root
-  AfterInstall:
-    - location: scripts/start_server.sh
-      timeout: 300
-      runas: root
